--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "_moduleAliases": {
-    "@": "dist/src"
+    "@math": "dist/src/math"
   },
   "scripts": {
     "build": "rimraf dist && npx tsc",
