--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     "noImplicitAny": true, /* Raise error on expressions and declarations with an implied 'any' type. */
     /* Module Resolution Options */
     "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": ".", /* Base directory to resolve non-absolute module names. */
+    "baseUrl": "./src", /* Base directory to resolve non-absolute module names. */
     "paths": { /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-      "@/*": [
-        "./src/*"
+      "@math/*": [
+        "math/*"
       ]
     },
     "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
