--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "_moduleAliases": {
-    "@math": "dist/src/math"
+    "@controller": "dist/src/controller",
+    "@lib": "dist/src/lib",
+    "@routes": "dist/src/routes",
+    "@type": "dist/src/type",
+    "@utils": "dist/src/utils",
+    "@schema": "dist/src/schema",
+    "@middleware": "dist/src/middleware",
+    "@models": "dist/src/models"
   },
   "scripts": {
     "build": "rimraf dist && npx tsc",
@@ -17,12 +24,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
-    "rimraf": "^4.4.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.2.0",
+    "rimraf": "^4.4.0",
+    "xss-clean": "^0.1.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/hpp": "^0.2.2",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
